tests/tests/snapshots/test__typescript__ts-export-to-namespaces-both.snap
---
source: tests/tests/typescript.rs
expression: fs_to_string(&path).unwrap()
---
ts-export-to-namespaces-both (17936 bytes)
────────────────────────────────────────
// This file has been generated by Specta. Do not edit this file manually.



export namespace test {
    export namespace types {
        export type A = { 
		a: $specta$root$test$.types.B,
		b: $specta$root$test$.types.B,
		c: $specta$root$test$.types.B,
		d: $specta$root$test$.types.D,
		e: $specta$root$test$.types.GenericFlattened<number>,
	};

        export type AGenericStruct<T> = { 
		field: $specta$root$test$.types.Demo<T, boolean>,
	};

        export type ActualType = { 
		a: $specta$root$test$.types.GenericType<string>,
	};

        export type B = { 
		b: number,
	};

        export type BasicEnum = "A" | "B";

        export type BoxFlattened = { 
		b: $specta$root$test$.types.BoxedInner,
	};

        export type BoxInline = { 
		c: $specta$root$test$.types.BoxedInner,
	};

        export type BoxedInner = { 
		a: number,
	};

        export type BracedStruct = string;

        /**
 * Some triple-slash comment
 * Some more triple-slash comment
 */
export type CommentedEnum = 
	/**
 * Some triple-slash comment
 * Some more triple-slash comment
 */
{ A: number } | 
	/**
 * Some triple-slash comment
 * Some more triple-slash comment
 */
{ B: { 
	/**
 * Some triple-slash comment
 * Some more triple-slash comment
 */
a: number } };

        /**
 * Some triple-slash comment
 * Some more triple-slash comment
 */
export type CommentedStruct = { 
		
	/**
 * Some triple-slash comment
 * Some more triple-slash comment
 */
a: number,
	};

        export type D = { 
		flattened: number,
	};

        export type Demo<A, B> = { 
		a: A,
		b: B,
	};

        export type DeprecatedEnumVariants = 
	/**
 * @deprecated
 */
"A" | 
	/**
 * @deprecated Nope
 */
"B" | 
	/**
 * @deprecated Nope
 */
"C";

        export type DeprecatedFields = { 
		a: number,
		
	/**
 * @deprecated
 */
b: string,
		
	/**
 * @deprecated This field is cringe!
 */
c: string,
		
	/**
 * @deprecated This field is cringe!
 */
d: string,
	};

        export type DeprecatedTupleVariant = [
	/**
 * @deprecated
 */
string, 
	/**
 * @deprecated Nope
 */
string, 
	/**
 * @deprecated Nope
 */
number];

        /**
 * @deprecated
 */
export type DeprecatedType = { 
		a: number,
	};

        /**
 * @deprecated Look at you big man using a deprecation message
 */
export type DeprecatedTypeWithMsg = { 
		a: number,
	};

        /**
 * @deprecated Look at you big man using a deprecation message
 */
export type DeprecatedTypeWithMsg2 = { 
		a: number,
	};

        export type DoubleFlattened = { 
		a: $specta$root$test$.types.ToBeFlattened,
		b: $specta$root$test$.types.ToBeFlattened,
	};

        export type Eight = { A: string } | "B";

        export type EnumMacroAttributes = { A: string } | { bbb: number } | { cccc: number } | { D: { a: string; b: number } };

        export type EnumReferenceRecordKey = { 
		a: Partial<{ [key in $specta$root$test$.types.BasicEnum]: number }>,
	};

        export type EnumRenameAllUppercase = "HELLOWORLD" | "VARIANTB" | "TESTINGWORDS";

        export type ExtraBracketsInTupleVariant = { A: string };

        export type ExtraBracketsInUnnamedStruct = string;

        export type First = { 
		a: string,
	};

        export type FlattenEnum = { tag: "One" } | { tag: "Two" } | { tag: "Three" };

        export type FlattenEnumStruct = ($specta$root$test$.types.FlattenEnum) & { 
		outer: string,
	};

        export type FlattenOnNestedEnum = ($specta$root$test$.types.NestedEnum) & { 
		id: string,
	};

        export type FlattenedInner = { 
		c: $specta$root$test$.types.Inner,
	};

        export type Fourth = { 
		a: $specta$root$test$.types.First,
		b: $specta$root$test$.types.First,
	};

        export type GenericFlattened<T> = { 
		generic_flattened: T,
	};

        export type GenericStruct<T> = { 
		arg: T,
	};

        export type GenericTupleStruct<T> = T;

        export type GenericType<T> = "Undefined" | T;

        export type HasGenericAlias = { [key in number]: string };

        export type InlineEnumField = { A: $specta$root$test$.types.PlaceholderInnerField };

        export type InlineOptionalType = { 
		optional_field: $specta$root$test$.types.PlaceholderInnerField | null,
	};

        export type InlineStruct = { 
		ref_struct: $specta$root$test$.types.SimpleStruct,
		val: number,
	};

        export type InlineTuple = { 
		demo: [string, boolean],
	};

        export type InlineTuple2 = { 
		demo: [$specta$root$test$.types.InlineTuple, boolean],
	};

        export type InlinerStruct = { 
		inline_this: $specta$root$test$.types.InlineStruct,
		dont_inline_this: $specta$root$test$.types.RefStruct,
	};

        export type Inner = { 
		a: number,
		b: $specta$root$test$.types.FlattenedInner,
	};

        export type InvalidToValidType = { 
		cause: null | null,
	};

        export type Issue281 = { 
		default_unity_arguments: string[],
	};

        /**
 * https://github.com/specta-rs/specta/issues/374
 */
export type Issue374 = { 
		foo: boolean,
		bar: boolean,
	};

        export type KebabCase = { 
		"test-ing": string,
	};

        export type MacroEnum = { Demo: string } | { Demo2: { demo2: string } };

        export type MacroStruct = string;

        export type MacroStruct2 = { 
		demo: string,
	};

        export type MyEmptyInput = Record<string, never>;

        export type MyEnum = { A: string } | { B: number };

        export type MyEnumAdjacent = { t: "Variant"; c: ($specta$root$test$.types.First) };

        export type MyEnumExternal = { Variant: ($specta$root$test$.types.First) };

        export type MyEnumTagged = ($specta$root$test$.types.First) & { type: "Variant" };

        export type MyEnumUntagged = ($specta$root$test$.types.First);

        export type NestedEnum = { type: "a"; value: string } | { type: "b"; value: number };

        export type NonOptional = string | null;

        export type Optional = { 
		a: number | null,
		b?: number | null,
		c: string | null,
		d: boolean,
	};

        export type OptionalInEnum = { A: string | null } | { B: { a: string | null } } | { C: { a?: string | null } };

        export type OptionalOnNamedField = string | null;

        export type OptionalOnTransparentNamedField = { 
		b: string | null,
	};

        export type OptionalOnTransparentNamedFieldInner = string | null;

        export type OverridenStruct = { 
		overriden_field: string,
	};

        export type PlaceholderInnerField = { 
		a: string,
	};

        export type Recursive = { 
		demo: $specta$root$test$.types.Recursive,
	};

        export type RecursiveInEnum = { A: ($specta$root$test$.types.RecursiveInEnum) };

        export type RecursiveInline = ($specta$root$test$.types.RecursiveInline);

        export type RecursiveMapValue = { 
		demo: { [key in string]: $specta$root$test$.types.RecursiveMapValue },
	};

        export type RecursiveTransparent = $specta$root$test$.types.RecursiveInline;

        export type RefStruct = $specta$root$test$.types.TestEnum;

        export type Regular = { [key in string]: null };

        export type Rename = "OneWord" | "Two words";

        export type RenameSerdeSpecialChar = { 
		b: number,
	};

        export type RenameWithWeirdCharsField = { 
		odata_context: string,
	};

        export type RenameWithWeirdCharsVariant = { "@odata.context": string };

        export type Second = { 
		a: number,
	};

        export type Seventh = { 
		a: $specta$root$test$.types.First,
		b: $specta$root$test$.types.Second,
	};

        export type SimpleStruct = { 
		a: number,
		b: string,
		c: [number, string, number],
		d: string[],
		e: string | null,
	};

        /**
 * Some single-line comment
 */
export type SingleLineComment = 
	/**
 * Some single-line comment
 */
{ A: number } | 
	/**
 * Some single-line comment
 */
{ B: { 
	/**
 * Some single-line comment
 */
a: number } };

        export type Sixth = { 
		a: $specta$root$test$.types.First,
		b: $specta$root$test$.types.First,
	};

        export type SkipStructFields = { 
		a: number,
	};

        export type SkipVariant = { A: string };

        export type SkipVariant2 = { tag: "A"; data: string };

        export type SkipVariant3 = { A: { a: string } };

        export type SkippedFieldWithinVariant = { type: "A"; data: null } | { type: "B"; data: string };

        export type SpectaSkipNonTypeField = { 
		a: number,
	};

        export type SpectaTypeOverride = { 
		string_ident: string,
		u32_ident: number,
		path: string,
	};

        export type StructRenameAllUppercase = { 
		A: number,
		B: number,
	};

        export type TagOnStructWithInline = { 
		type: "TagOnStructWithInline",
		a: $specta$root$test$.types.First,
		b: $specta$root$test$.types.First,
	};

        export type Tenth = string | "B" | $specta$root$test$.types.First;

        export type TestEnum = "Unit" | { Single: number } | { Multiple: [number, number] } | { Struct: { a: number } };

        export type Third = ($specta$root$test$.types.First) & { 
		b: { [key in string]: string },
		c: $specta$root$test$.types.First,
	};

        export type ToBeFlattened = { 
		a: string,
	};

        export type TransparentType = $specta$root$test$.types.TransparentTypeInner;

        export type TransparentType2 = null;

        export type TransparentTypeInner = { 
		inner: string,
	};

        export type TransparentTypeWithOverride = string;

        export type TupleStruct = string;

        export type TupleStruct1 = number;

        export type TupleStruct3 = [number, boolean, string];

        export type TupleStructWithRep = string;

        export type Unit1 = null;

        export type Unit2 = Record<string, never>;

        export type Unit3 = [];

        export type Unit4 = null;

        export type Unit5 = "A";

        export type Unit6 = { A: [] };

        export type Unit7 = { A: Record<string, never> };

        export type UnitVariants = "A" | "B" | "C";

        export type UntaggedVariants = string | number | { id: string } | [string, boolean];

        export type UntaggedVariantsKey = string | number;

        export type UntaggedVariantsWithoutValue = string | [number, string] | number;

        export type Variants = { A: string } | { B: number } | { C: number };


        export namespace selection {
            export type UserListSelection<name, age> = { 
		name: name,
		age: age,
	};

            export type UserSelection<name, age> = { 
		name: name,
		age: age,
	};

        }

        export namespace type_type {
            export type Type = never;

        }
    }

    export namespace typescript {
        export type TestCollectionRegister = never;

    }
}

export namespace virtual {
    export type Primitives = { 
		"1": number,
		"2": number,
		"3": number,
		"4": number,
		"5": number,
		"6": number,
		"7": number,
		"8": number,
		"9": number,
		a: number,
		b: number,
		c: number,
		d: number,
		e: number,
		f: boolean,
		"10": string,
		"11": { 
	start: number,
	end: number,
},
		"12": { 
	start: number,
	end: number,
},
		"13": null,
		"14": [string, number],
		"15": [string, number, boolean],
		"16": [[string, number], [boolean, string, boolean], null],
		"17": [boolean, boolean, boolean, boolean, boolean, boolean, boolean, boolean, boolean, boolean, boolean, boolean],
		"18": string,
		"19": string,
		"1a": string,
		"1b": string,
		"1c": string,
		"1d": string,
		"1e": string,
		"1f": string,
		"20": { 
	duration_since_epoch: number,
	duration_since_unix_epoch: number,
},
		"21": { 
	secs: number,
	nanos: number,
},
		"22": string,
		"23": boolean,
		"24": number,
		"25": number[],
		"26": number[],
		"27": number[],
		"28": number[],
		"29": $specta$root$test$.types.MyEnum[],
		"2a": $specta$root$test$.types.MyEnum[],
		"2b": $specta$root$test$.types.MyEnum[],
		"2c": $specta$root$test$.types.MyEnum[],
		"2d": number[],
		"2e": number[],
		"2f": number | null,
		"30": null | null,
		"31": number[] | null,
		"32": string | null,
		"33": string | null,
		"34": $specta$root$test$.types.Unit1,
		"35": $specta$root$test$.types.Unit2,
		"36": $specta$root$test$.types.Unit3,
		"37": $specta$root$test$.types.Unit4,
		"38": $specta$root$test$.types.Unit5,
		"39": $specta$root$test$.types.Unit6,
		"3a": $specta$root$test$.types.Unit7,
		"3b": $specta$root$test$.types.SimpleStruct,
		"3c": $specta$root$test$.types.TupleStruct1,
		"3d": $specta$root$test$.types.TupleStruct3,
		"3e": $specta$root$test$.types.TestEnum,
		"3f": $specta$root$test$.types.RefStruct,
		"40": $specta$root$test$.types.InlinerStruct,
		"41": $specta$root$test$.types.GenericStruct<number>,
		"42": $specta$root$test$.types.GenericStruct<string>,
		"43": $specta$root$test$.types.FlattenEnumStruct,
		"44": $specta$root$test$.types.OverridenStruct,
		"45": $specta$root$test$.types.HasGenericAlias,
		"46": $specta$root$test$.types.SkipVariant,
		"47": $specta$root$test$.types.SkipVariant2,
		"48": $specta$root$test$.types.SkipVariant3,
		"49": $specta$root$test$.types.SkipStructFields,
		"4a": $specta$root$test$.types.SpectaSkipNonTypeField,
		"4b": $specta$root$test$.types.EnumMacroAttributes,
		"4c": $specta$root$test$.types.InlineEnumField,
		"4d": $specta$root$test$.types.InlineOptionalType,
		"4e": $specta$root$test$.types.Rename,
		"4f": $specta$root$test$.types.TransparentType,
		"50": $specta$root$test$.types.TransparentType2,
		"51": $specta$root$test$.types.TransparentTypeWithOverride,
		"52": (number | null)[],
		"53": Partial<{ [key in $specta$root$test$.types.BasicEnum]: null }>,
		"54": number | null,
		"55": $specta$root$test$.types.PlaceholderInnerField[],
		"56": Partial<{ [key in $specta$root$test$.types.BasicEnum]: number }>,
		"57": $specta$root$test$.types.EnumReferenceRecordKey,
		"58": $specta$root$test$.types.FlattenOnNestedEnum,
		"59": null,
		"5a": null,
		"5b": never,
		"5c": $specta$root$test$.types.MyEmptyInput,
		"5d": string,
		"5e": [string],
		"5f": $specta$root$test$.types.ExtraBracketsInTupleVariant,
		"60": $specta$root$test$.types.ExtraBracketsInUnnamedStruct,
		"61": $specta$root$test$.types.MyEnum[],
		"62": $specta$root$test$.types.InlineTuple,
		"63": $specta$root$test$.types.InlineTuple2,
		"64": string,
		"65": string,
		"66": $specta$root$test$.types.SkippedFieldWithinVariant,
		"67": $specta$root$test$.types.KebabCase,
		"68": string[],
		"69": $specta$root$test$.types.Issue281,
		"6a": $specta$root$test$.types.RenameWithWeirdCharsField,
		"6b": $specta$root$test$.types.RenameWithWeirdCharsVariant,
		"6c": $specta$root$test$.types.Issue374,
		"6d": $specta$root$test$.types.type_type.Type,
		"6e": $specta$root$test$.types.ActualType,
		"6f": $specta$root$test$.types.SpectaTypeOverride,
		"70": $specta$root$test$.types.InvalidToValidType,
		"71": $specta$root$test$.types.TupleStruct,
		"72": $specta$root$test$.types.TupleStructWithRep,
		"73": $specta$root$test$.types.GenericTupleStruct<string>,
		"74": $specta$root$test$.types.BracedStruct,
		"75": $specta$root$test$.types.StructRenameAllUppercase,
		"76": $specta$root$test$.types.RenameSerdeSpecialChar,
		"77": $specta$root$test$.types.EnumRenameAllUppercase,
		"78": $specta$root$test$.types.Recursive,
		"79": $specta$root$test$.types.RecursiveMapValue,
		"7a": $specta$root$test$.types.RecursiveTransparent,
		"7b": $specta$root$test$.types.RecursiveInEnum,
		"7c": $specta$root$test$.types.NonOptional,
		"7d": $specta$root$test$.types.OptionalOnNamedField,
		"7e": $specta$root$test$.types.OptionalOnTransparentNamedField,
		"7f": $specta$root$test$.types.OptionalInEnum,
		"80": $specta$root$test$.types.Optional,
		"81": $specta$root$test$.types.UntaggedVariants,
		"82": $specta$root$test$.types.UntaggedVariantsWithoutValue,
		"83": { [key in string]: null },
		"84": $specta$root$test$.types.Regular,
		"85": { [key in never]: null },
		"86": Partial<{ [key in $specta$root$test$.types.UnitVariants]: null }>,
		"87": Partial<{ [key in $specta$root$test$.types.UntaggedVariantsKey]: null }>,
		"88": Partial<{ [key in $specta$root$test$.types.Variants]: null }>,
		"89": $specta$root$test$.types.MacroStruct,
		"8a": $specta$root$test$.types.MacroStruct2,
		"8b": $specta$root$test$.types.MacroEnum,
		"8c": $specta$root$test$.types.DeprecatedType,
		"8d": $specta$root$test$.types.DeprecatedTypeWithMsg,
		"8e": $specta$root$test$.types.DeprecatedTypeWithMsg2,
		"8f": $specta$root$test$.types.DeprecatedFields,
		"90": $specta$root$test$.types.DeprecatedTupleVariant,
		"91": $specta$root$test$.types.DeprecatedEnumVariants,
		"92": $specta$root$test$.types.CommentedStruct,
		"93": $specta$root$test$.types.CommentedEnum,
		"94": $specta$root$test$.types.SingleLineComment,
		"95": $specta$root$test$.types.Demo<number, boolean>,
		"96": $specta$root$test$.types.Demo<number, boolean>,
		"97": $specta$root$test$.types.Demo<number, boolean>,
		"98": $specta$root$test$.types.Demo<number, boolean>,
		"99": $specta$root$test$.types.Demo<number, boolean>,
		"9a": { [key in string]: number },
		"9b": { [key in number]: string },
		"9c": { [key in string]: $specta$root$test$.types.AGenericStruct<number> },
		"9d": $specta$root$test$.types.AGenericStruct<number>,
		"9e": $specta$root$test$.types.A,
		"9f": $specta$root$test$.types.DoubleFlattened,
		a0: $specta$root$test$.types.FlattenedInner,
		a1: $specta$root$test$.types.BoxFlattened,
		a2: $specta$root$test$.types.BoxInline,
		a3: $specta$root$test$.types.First,
		a4: $specta$root$test$.types.Second,
		a5: $specta$root$test$.types.Third,
		a6: $specta$root$test$.types.Fourth,
		a7: $specta$root$test$.types.TagOnStructWithInline,
		a8: $specta$root$test$.types.Sixth,
		a9: $specta$root$test$.types.Seventh,
		aa: $specta$root$test$.types.Eight,
		ab: $specta$root$test$.types.Tenth,
		ac: $specta$root$test$.types.MyEnumTagged,
		ad: $specta$root$test$.types.MyEnumExternal,
		ae: $specta$root$test$.types.MyEnumAdjacent,
		af: $specta$root$test$.types.MyEnumUntagged,
	};

}

export import $specta$root$test$ = test;
export import $specta$root$virtual$ = virtual;
════════════════════════════════════════
